fix nav spacing

--- a/css/style.css
+++ b/css/style.css
@@ -21,15 +21,19 @@ body {
   justify-content: space-between;
 }
 
+#grid {
+  margin-top: 3vh;
+}
+
 .grid-visuals {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
   width: 10vw;
-  height: 50vh;
+  height: 47vh;
   padding: 0 1vw;
-  margin: 5vh 0;
+  margin-bottom: 5vh;
 }
 
 .grid-visuals button {
@@ -196,7 +200,6 @@ button {
   align-items: flex-start;
   justify-content: space-around;
   margin-top: 2vh;
-  bottom: 10vh;
 }
 
 .action-buttons h2 {
@@ -211,8 +214,7 @@ button {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  margin: 2vh 0;
-  height: 3vh;
+  margin: 3vh 0;
 }
 
 .action-buttons div button {
